--- a/composer.json
+++ b/composer.json
@@ -2,4 +2,12 @@
 	"require-dev": {
 		"fzaninotto/faker": "1.5.*"
 	}
+	"scripts": {
+        "post-install-cmd": [
+            "bower install"
+        ],
+        "post-update-cmd": [
+            "bower install"
+        ]
+    }
 }
